Fix support for IMAP servers with non-standard path separators

REVIEW: 112761
BUG: 324219
FIXED-IN: 4.11.2