resources/imap/imapresource.cpp
@@ -541,6 +541,16 @@ void ImapResource::doSetOnline(bool online)
   ResourceBase::doSetOnline( online );
 }
 
+QChar ImapResource::separatorCharacter() const
+{
+    return m_separatorCharacter;
+}
+
+void ImapResource::setSeparatorCharacter( const QChar &separator )
+{
+    m_separatorCharacter = separator;
+}
+
 bool ImapResource::needsNetwork() const
 {
   const QString hostName = Settings::self()->imapServer().section( ':', 0, 0 );
