resources/imap/resourcetask.cpp
@@ -400,12 +400,32 @@ void ResourceTask::kill()
 
 const QChar ResourceTask::separatorCharacter() const
 {
-  //If we create a toplevel folder, assume the separator to be '/'. This is not perfect, but detecting the right
-  //IMAP separator is not straightforward for toplevel folders, and fixes bug 292418 and maybe other, where
-  //subfolders end up with remote id's starting with "i" (the first letter of imap:// ...)
-  const QString parentRemoteId = parentCollection().remoteId();
-  const QChar separator = ( ( parentRemoteId != rootRemoteId() ) && !parentRemoteId.isEmpty() ) ? parentRemoteId.at( 0 ) : '/';
-  return separator;
+  const QChar separator = m_resource->separatorCharacter();
+  if ( !separator.isNull() ) {
+    return separator;
+  } else {
+    //If we request the separator before first folder listing, then try to guess
+    //the separator:
+    //If we create a toplevel folder, assume the separator to be '/'. This is not perfect, but detecting the right
+    //IMAP separator is not straightforward for toplevel folders, and fixes bug 292418 and maybe other, where
+    //subfolders end up with remote id's starting with "i" (the first letter of imap:// ...)
+
+    QString remoteId;
+    // We don't always have parent collection set (for example for CollectionChangeTask),
+    // in such cases however we can use current collection's remoteId to get the separator
+    const Akonadi::Collection parent = parentCollection();
+    if ( parent.isValid() ) {
+        remoteId = parent.remoteId();
+    } else {
+        remoteId = collection().remoteId();
+    }
+    return ( ( remoteId != rootRemoteId() ) && !remoteId.isEmpty() ) ? remoteId.at( 0 ) : QLatin1Char('/');
+  }
+}
+
+void ResourceTask::setSeparatorCharacter( const QChar& separator )
+{
+    m_resource->setSeparatorCharacter( separator );
 }
 
 
